--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="pixiv,P站助手插画,P站助手官网"/>
     <title>P站助手</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="https://github.com/zzycami/pixivlite.github.io/raw/main/index.css" />
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.14.0/css/all.css" rel="stylesheet">
 </head>
@@ -31,13 +31,13 @@
                     <span class="button-text">Android版</span>
                 </a>
                 <a class="qrcode_link" href="javascript:">
-                    <img src="/qrcode.png" class="qrcode" />
-                    <img src="/qrcode_home.png" class="qrcode_home"/>
+                    <img src="https://github.com/zzycami/pixivlite.github.io/raw/main/qrcode.png" class="qrcode" />
+                    <img src="https://github.com/zzycami/pixivlite.github.io/raw/main/qrcode_home.png" class="qrcode_home"/>
                 </a>
             </div>
         </div>
         <div class="col right">
-            <img src="/screenshot.png" />
+            <img src="https://github.com/zzycami/pixivlite.github.io/raw/main/screenshot.png" />
         </div>
     </div>
 </div>
